--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@ change conditions</h3>
         <div class="poster-grid">
             <!-- Poster Item 1 -->
             <div class="poster-card">
-                <div class="poster-thumbnail" onclick="openPosterModal('image10.jpeg', 'Integrative Transcriptomics in HCM')">
-                    <img src="image10.jpeg" alt="Poster Thumbnail">
+                <div class="poster-thumbnail" onclick="openPosterModal('imagesbsp.svg', 'Integrative Transcriptomics in HCM')">
+                    <img src="imagesbsp.svg" alt="Poster Thumbnail">
                     <div class="poster-overlay">
                         <span class="view-icon">🔍 Click to Preview</span>
                     </div>
@@ -264,19 +264,13 @@ change conditions</h3>
                     </div>
                     <h3>HCMdrugs: A Drug Database for Hypertrophic Cardiomyopathy</h3>
                     <p class="conference-name">GCUF Innovative Expo, Faisalabad</p>
-                    <div class="poster-actions">
-                        <a href="presentation.pdf" class="btn-sm" download>
-                            <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/></svg>
-                            Slides
-                        </a>
-                    </div>
                 </div>
             </div>
 
             <!-- Poster Item 3 -->
             <div class="poster-card">
-                <div class="poster-thumbnail" onclick="openPosterModal('image9.jpeg', 'Nanofilters')">
-                    <img src="image9.jpeg" alt="Poster Thumbnail">
+                <div class="poster-thumbnail" onclick="openPosterModal('imagenano.jpeg', 'Nanofilters')">
+                    <img src="imagenano.jpeg" alt="Poster Thumbnail">
                     <div class="poster-overlay">
                         <span class="view-icon">🔍 Click to Preview</span>
                     </div>
@@ -486,6 +480,7 @@ change conditions</h3>
 </body>
 
 </html>
+
 
 
 
